...
                  text="Create an Account"
                  testID={'Create Account Login'}
                />
                <Text style={styles.separator}>&#124;</Text>
                <Link
                  navFunction={() => NavigationService.navigate('ForgotPassword')}
                  text="Forgot Password?"
                  testID={'Forgot Password Login'}
                />
              </View>
            </View>
            {loading && <Loader />}
            <ModalSimple
              isVisible={resetPasswordModalOpen}
              onPress={closeResetPasswordModal}
              headline={`Reset Password\nInstructions Sent.`}
              content='Check your email to complete.'
              testID={'Modal Reset Password Login'}
            />
            <ModalSimple
              isVisible={userNotRegisteredModalOpen}
              onPress={closeUserNotRegisteredModal}
              headline={`We Can't Find\nAn Account With\nThis Email.\nPlease Sign Up Instead.`}
              testID={'Modal Not Registred Login'}
...
